--- a/index.ipynb
+++ b/index.ipynb
@@ -133,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = number_of_weeks + 2 # 5"
+    "number_of_weeks = 5"
    ]
   },
   {
